@@ -9,11 +9,13 @@ package com.onetouch.delinight.Service;
 
 import com.onetouch.delinight.DTO.BranchDTO;
 import com.onetouch.delinight.DTO.HotelDTO;
+import com.onetouch.delinight.DTO.MembersDTO;
 import com.onetouch.delinight.Entity.BranchEntity;
 import com.onetouch.delinight.Entity.HotelEntity;
 import com.onetouch.delinight.Entity.MembersEntity;
 import com.onetouch.delinight.Repository.BranchRepository;
 import com.onetouch.delinight.Repository.HotelRepository;
+import com.onetouch.delinight.Repository.InquireRepository;
 import com.onetouch.delinight.Repository.MembersRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -35,6 +37,23 @@ public class HotelServiceImpl implements HotelService{
     private final BranchRepository branchRepository;
     private final ModelMapper modelMapper;
     private final MembersRepository membersRepository;
+    private final InquireRepository inquireRepository;
+
+    @Override
+    public Integer unansweredCheck(Long hotelId) {
+        Integer id = inquireRepository.countByCheckInEntity_RoomEntity_HotelEntity_Id(hotelId);
+        return id;
+    }
+
+    @Override
+    public void addMembers(Long memberId, Long hotelId) {
+
+        HotelEntity hotelEntity = hotelRepository.findById(hotelId).get();
+        hotelEntity.setMembersEntity(membersRepository.findById(memberId).get());
+        log.info(hotelEntity);
+        hotelRepository.save(hotelEntity);
+    }
+
     @Override
     public void create(HotelDTO hotelDTO, String email) {
         HotelEntity hotelEntity =
@@ -73,9 +92,18 @@ public class HotelServiceImpl implements HotelService{
         List<HotelEntity> hotelEntityList =
             hotelRepository.findAll();
         List<HotelDTO> hotelDTOList =
-        hotelEntityList.stream().toList().stream().map(
-                hotelEntity -> modelMapper.map(hotelEntity, HotelDTO.class)
-        ).collect(Collectors.toList());
+        hotelEntityList.stream().toList().stream().map(hotelEntity -> {
+                    HotelDTO hotelDTO = modelMapper.map(hotelEntity, HotelDTO.class);
+                    if (hotelEntity.getMembersEntity() != null) {
+                        MembersDTO membersDTO = modelMapper.map(hotelEntity.getMembersEntity(), MembersDTO.class);
+                        hotelDTO.setMembersDTO(membersDTO);
+                    } else {
+                        hotelDTO.setMembersDTO(null);
+                    }
+
+                    return hotelDTO;
+                })
+                .collect(Collectors.toList());
         return hotelDTOList;
     }
 
